--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>Sander Schmidt</h1>
 <h2> Biomedicin studerende | Mentor og formidler </h2>
 
-<img  src="visit kort billede.png" width="50%	" height="auto">
+<img  src="Visit kort billede.png" width="50%	" height="auto">
 
 <h2>Who am i</h2>
 <p>Motivated and multidisciplinary individual with a strong foundation in science, education, and technology. I bring experience in mentoring, and software development, combined with a passion for teaching, communication and innovation. As a senior mentor at Videnskabsklubben, I developed and led engaging science programs for children and adults, fostering curiosity in biology, chemistry, and physics. My early experience as a software developer at Interxion (now Digital Realty), where I earned the Innovation Award in 2019, reflects my analytical mindset and creativity in solving real-world problems.
