--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Sander Schmidt</h1>
-<h2> Biomedicin Student | Mentor in science </h2>
+<h2> Biomedicine Student | Mentor in science </h2>
 
 <img  src="Professional photo.jpg" width="50%	" height="auto">
 
